...
                android:id="@+id/iv_icono_nombre"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Icono nombre entrevistado"
                android:scaleType="centerCrop"
                android:tint="@color/colorSecondaryVariant"
                app:layout_constraintBottom_toBottomOf="@+id/il_nombre_entrevistado"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="@+id/il_nombre_entrevistado"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_nombre_entrevistado"
...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icono_nombre"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_registro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre_entrevistado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_apellido_entrevistado"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:hint="Apellido"
...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icono_nombre"
                app:layout_constraintTop_toBottomOf="@+id/il_nombre_entrevistado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_apellido_entrevistado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="16sp" />
...
            <ImageView
                android:id="@+id/iv_icono_fecha_nacimiento"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="Icono fecha nacimiento entrevistado"
                android:tint="@color/colorSecondaryVariant"
                app:layout_constraintBottom_toBottomOf="@+id/il_fecha_nacimiento"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="@+id/il_fecha_nacimiento"
                app:srcCompat="@drawable/ic_cake_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_fecha_nacimiento"
...
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icono_fecha_nacimiento"
                app:layout_constraintTop_toBottomOf="@+id/il_sexo_entrevistado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fecha_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto"
                    android:inputType="date"
                    android:singleLine="true"
...
                app:layout_constraintBottom_toBottomOf="@+id/il_ciudad_entrevistado"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="@+id/il_ciudad_entrevistado"
                app:srcCompat="@drawable/ic_place_black_24dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_jubilado_legal"
                style="@style/Widget.MaterialComponents.CompoundButton.Switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:checked="false"
...
                android:switchPadding="8dp"
                android:text="Jubilado legal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_switch_jubilado_value"
                app:layout_constraintStart_toStartOf="@+id/il_n_convivientes_entrevistado"
                app:layout_constraintTop_toBottomOf="@+id/il_n_convivientes_entrevistado" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_n_convivientes_entrevistado"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
...
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/il_estado_civil_entrevistado">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_n_convivientes_entrevistado"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:fontFamily="@font/roboto"
                    android:inputType="numberDecimal"
...
